force-app/main/default/objects/Sample_Request__c/Sample_Request__c.object-meta.xml
<CustomObject>
    <label>DN-US-Sample Request</label>
    <nameField>
        <displayFormat>Sample-{000000}</displayFormat>
        <label>Sample Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>