force-app/main/default/objects/Sample_Request__c/fields/Alternate_Shipping_Location__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Shipping_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alternate Shipping Location:</label>
    <type>TextArea</type>
</CustomField>