force-app/main/default/objects/Sample_Request__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>