force-app/main/default/objects/Sample_Request__c/fields/Contact_s_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Address__c</fullName>
    <formula>Contact__r.MailingStreet &amp; BR() &amp;
 Contact__r.MailingCity  &amp; &quot;, &quot; &amp;  Contact__r.MailingState  &amp; BR()&amp;
 Contact__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&apos;s Address</label>
    <type>Text</type>
</CustomField>