force-app/main/default/objects/Sample_Request__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>This field contains the creation date.</description>
    <formula>TEXT(YEAR(DATEVALUE(CreatedDate))) 
+ 
If(MONTH(DATEVALUE(CreatedDate))&lt;=9,&apos;0&apos;+TEXT(MONTH(DATEVALUE(CreatedDate))),TEXT(MONTH(DATEVALUE(CreatedDate)))) 
+ 
If(DAY(DATEVALUE(CreatedDate))&lt;=9,&apos;0&apos;+TEXT(DAY(DATEVALUE(CreatedDate))),TEXT(DAY(DATEVALUE(CreatedDate))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>Text</type>
</CustomField>