force-app/main/default/objects/Sample_Request__c/fields/External_Sample_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Sample_Request_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Sample Request ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>