force-app/main/default/objects/Sample_Request__c/fields/HCPContactId__c.field-meta.xml
<CustomField>
    <fullName>HCPContactId__c</fullName>
    <formula>left(Contact__r.Id ,15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCPContactId</label>
    <type>Text</type>
</CustomField>