force-app/main/default/objects/Sample_Request__c/fields/Item_Cost__c.field-meta.xml
<CustomField>
    <fullName>Item_Cost__c</fullName>
    <description>This field contains the cost of the item.</description>
    <formula>RIGHT(TEXT(Item_Requested__c), (LEN(TEXT(Item_Requested__c)) - (FIND(&quot;$&quot;, TEXT(Item_Requested__c)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Cost</label>
    <type>Text</type>
</CustomField>