force-app/main/default/objects/Sample_Request__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <description>This field contains the name of the Item.</description>
    <formula>LEFT(TEXT(Item_Requested__c), (FIND(&quot;$&quot;, TEXT(Item_Requested__c))-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Name</label>
    <type>Text</type>
</CustomField>