force-app/main/default/objects/Sample_Request__c/fields/Item_Requested__c.field-meta.xml
<CustomField>
    <fullName>Item_Requested__c</fullName>
    <label>Item Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HEMCON Small (1) HC103 FMV $15.84</fullName>
                <default>true</default>
                <label>HEMCON Small (1) HC103 FMV $15.84</label>
            </value>
            <value>
                <fullName>HEMCON Large (1) HC111 FMV $20.58</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>