force-app/main/default/objects/Sample_Request__c/fields/Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Modified_Date__c</fullName>
    <description>This field contains the modified date.</description>
    <formula>TEXT(YEAR(DATEVALUE(LastModifiedDate))) 
+ 
If(MONTH(DATEVALUE(LastModifiedDate))&lt;=9,&apos;0&apos;+TEXT(MONTH(DATEVALUE(LastModifiedDate))),TEXT(MONTH(DATEVALUE(LastModifiedDate)))) 
+ 
If(DAY(DATEVALUE(LastModifiedDate))&lt;=9,&apos;0&apos;+TEXT(DAY(DATEVALUE(LastModifiedDate))),TEXT(DAY(DATEVALUE(LastModifiedDate))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modified Date</label>
    <type>Text</type>
</CustomField>