force-app/main/default/objects/Sample_Request__c/fields/Number_of_Samples_Requested__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Samples_Requested__c</fullName>
    <label>Number of Samples Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>