force-app/main/default/objects/Sample_Request__c/fields/Sent_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sent_Order_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CSR to enter  number once sample has been shipped</inlineHelpText>
    <label>Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>