force-app/main/default/objects/Sample_Request__c/fields/Ship_to_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Contact_Address__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Uncheck if Sample is to be shipped to another location</inlineHelpText>
    <label>Ship to Contact Address</label>
    <type>Checkbox</type>
</CustomField>