force-app/main/default/objects/Sample_Request__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>IF( Ship_to_Contact_Address__c = True,   Contact_s_Address__c , Alternate_Shipping_Location__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Samples will Ship to this Address</label>
    <type>Text</type>
</CustomField>